--- a/index.html
+++ b/index.html
@@ -11,16 +11,34 @@
     <link rel="stylesheet" href="main.css">
 </head>
 
-<body>
-    <main>
-        <section id="product-overview">
-            <h1>Get the freedom you deserve.</h1>
-        </section>
-        <section id="plans">
-            <h1  class="section-title">Choose your plan</h1>
-            <p>Make sure you have money</p>
-        </section>
-    </main>
-</body>
+    <body>
+        <header class="main-header">
+            <div>
+                <a href="index.html">uHost</a>
+            </div>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="packages/index.html">Packages</a>
+                    </li>
+                    <li>
+                        <a href="customers/index.html">Customers</a>
+                    </li>
+                    <li>
+                        <a href="start-hosting/index.html">Start Hosting</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <section id="product-overview">
+                <h1>Get the freedom you deserve.</h1>
+            </section>
+            <section id="plans">
+                <h1 class="section-title">Choose your plan</h1>
+                <p>Make sure you have money</p>
+            </section>
+        </main>
+    </body>
 
 </html>
