--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </ul>
             </section>
         </main>
-        <footer>
+        <footer class="main-footer">
             <nav>
                 <ul>
                     <li>
