--- a/packages/index.html
+++ b/packages/index.html
@@ -6,26 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>uHost</title>
     <link rel="shortcut icon" href="favicon.png">
-    <link href="https://fonts.googleapis.com/css?family=Anton&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="../shared.css">
+    <link rel="stylesheet" href="./packages.css">
 </head>
 
     <body>
         <header class="main-header">
             <div>
-                <a href="index.html" class="main-header__brand">uHost</a>
+                <a href="../index.html" class="main-header__brand">uHost</a>
             </div>
             <nav class="main-nav">
                 <ul class="main-nav__items">
                     <li class="main-nav__item">
-                        <a href="packages/index.html">Packages</a>
+                        <a href="index.html">Packages</a>
                     </li>
                     <li class="main-nav__item">
-                        <a href="customers/index.html">Customers</a>
+                        <a href="../customers/index.html">Customers</a>
                     </li>
                     <li class="main-nav__item main-nav__item--cta">
-                        <a href="start-hosting/index.html">Start Hosting</a>
+                        <a href="../start-hosting/index.html">Start Hosting</a>
                     </li>
                 </ul>
             </nav>
