Adding styles to the links.

--- a/packages/index.html
+++ b/packages/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../shared.css">
-    <link rel="stylesheet" href="./packages.css">
+    <link rel="stylesheet" href="packages.css">
 </head>
 
     <body>
@@ -32,7 +32,7 @@
         </header>
 
         <main>
-                <section>
+                <section class="package">
                         <a href="#">
                             <h1>Our PLUS Plan</h1>
                             <h2>The most popular choice of our customers.</h2>
@@ -40,14 +40,14 @@
                                 are always available!</p>
                         </a>
                     </section>
-                    <section>
+                    <section class="package">
                         <a href="#">
                             <h1>Our FREE Plan</h1>
                             <h2>An extremely solid start into our hosting world.</h2>
                             <p>Get started immediately at zero cost!</p>
                         </a>
                     </section>
-                    <section>
+                    <section class="package">
                         <a href="#">
                             <h1>Our PREMIUM Plan</h1>
                             <h2>All your enterprise needs. Instant support, guaranteed uptime. </h2>
