--- a/packages/index.html
+++ b/packages/index.html
@@ -32,26 +32,26 @@
         </header>
 
         <main>
-                <section class="package">
+                <section class="package" id="plus">
                         <a href="#">
-                            <h1>Our PLUS Plan</h1>
-                            <h2>The most popular choice of our customers.</h2>
-                            <p>Benefit from increased storage and faster support to ensure that your mission-critical data and applications
+                            <h1 class="package_title">Our PLUS Plan</h1>
+                            <h2 class="package_subtitle">The most popular choice of our customers.</h2>
+                            <p class="package_info">Benefit from increased storage and faster support to ensure that your mission-critical data and applications
                                 are always available!</p>
                         </a>
                     </section>
-                    <section class="package">
+                    <section class="package" id="free">
                         <a href="#">
-                            <h1>Our FREE Plan</h1>
-                            <h2>An extremely solid start into our hosting world.</h2>
-                            <p>Get started immediately at zero cost!</p>
+                            <h1 class="package_title">Our FREE Plan</h1>
+                            <h2 class="package_subtitle">An extremely solid start into our hosting world.</h2>
+                            <p class="package_info">Get started immediately at zero cost!</p>
                         </a>
                     </section>
-                    <section class="package">
+                    <section class="package" id="premium">
                         <a href="#">
-                            <h1>Our PREMIUM Plan</h1>
-                            <h2>All your enterprise needs. Instant support, guaranteed uptime. </h2>
-                            <p>The best solution for small to large enterprises. Because hosting shouldn't be in the way!</p>
+                            <h1 class="package_title">Our PREMIUM Plan</h1>
+                            <h2 class="package_subtitle">All your enterprise needs. Instant support, guaranteed uptime. </h2>
+                            <p class="package_info">The best solution for small to large enterprises. Because hosting shouldn't be in the way!</p>
                         </a>
                     </section>
         </main>
