float left left border for right side plan

--- a/packages/index.html
+++ b/packages/index.html
@@ -47,6 +47,7 @@
                             <p class="package_info">Get started immediately at zero cost!</p>
                         </a>
                     </section>
+                    <div class="clearfix"></div>
                     <section class="package" id="premium">
                         <a href="#">
                             <h1 class="package_title">Our PREMIUM Plan</h1>
