--- a/packages/index.html
+++ b/packages/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="../favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../shared.css">
-    <link rel="stylesheet" href="packages.css">
+    <link rel="stylesheet" href="./packages.css">
 </head>
 
     <body>
@@ -16,6 +16,11 @@
         <div class="background"></div>
         <header class="main-header">
             <div>
+                <button class="toggle-button">
+                    <span class="toggle-button__bar"></span>
+                    <span class="toggle-button__bar"></span>
+                    <span class="toggle-button__bar"></span>
+                </button>
                 <a href="../index.html" class="main-header__brand">
                     <img src="../images/uhost-icon.png" alt="uHost - Your favouite hosting company">
                 </a>
@@ -34,7 +39,19 @@
                 </ul>
             </nav>
         </header>
-
+        <nav class="mobile-nav">
+            <ul class="mobile-nav__items">
+                <li class="mobile-nav__item">
+                    <a href="index.html">Packages</a>
+                </li>
+                <li class="mobile-nav__item">
+                    <a href="../customers/index.html">Customers</a>
+                </li>
+                <li class="mobile-nav__item mobile-nav__item--cta">
+                    <a href="../start-hosting/index.html">Start Hosting</a>
+                </li>
+            </ul>
+        </nav>
         <main>
                 <section class="package" id="plus">
                         <a href="#">
@@ -74,6 +91,7 @@
                 </ul>
             </nav>
         </footer>
+        <script src="../shared.js"></script>
     </body>
 
 </html>
